fix: add text blocks overflow and text-align

--- a/sass/component/_about-us.scss
+++ b/sass/component/_about-us.scss
@@ -1,6 +1,9 @@
 .about-us {
     padding-top: 60px;
     padding-bottom: 65px;
+
+    text-align: justify;
+    
     background-color: $color-light-bg;
     border-bottom: 6px solid #fff;
 
