--- a/style.css
+++ b/style.css
@@ -239,6 +239,7 @@ h3 {
 
 .services {
   padding-bottom: 35px;
+  text-align: justify;
   background-color: #f2f2f2;
   border-bottom: 6px solid #fff;
 }
@@ -279,6 +280,7 @@ h3 {
   max-height: 93px;
   display: flex;
   justify-content: space-between;
+  overflow: hidden;
 }
 
 .services__item-icon {
@@ -342,6 +344,7 @@ h3 {
 .about-us {
   padding-top: 60px;
   padding-bottom: 65px;
+  text-align: justify;
   background-color: #f2f2f2;
   border-bottom: 6px solid #fff;
 }
@@ -395,11 +398,13 @@ h3 {
   height: 300px;
 }
 .employee__descr {
+  max-height: 44px;
   margin-top: 10px;
   font-size: 1.2rem;
   line-height: 2.2rem;
   color: #767e9e;
   font-weight: 400;
+  overflow: hidden;
 }
 .employee__socials {
   margin-top: 20px;
@@ -454,6 +459,7 @@ h3 {
   padding: 60px 0 67px;
   background-color: #f06c64;
   border-bottom: 6px solid #ea676b;
+  text-align: justify;
 }
 .get-quote__title {
   color: #f0d8d9;
